--- a/css/main.scss
+++ b/css/main.scss
@@ -312,6 +312,10 @@ h1.page-header {
   img {
   	max-width: 100%;
   }
+  iframe {
+  	width: 100%;
+  	margin:15px auto;
+  }
 }
 
 .blog-post-title {
