--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,9 @@
+<div class="blog-sticky-logo">
+	<a href="http://alsacedigitale.org" target="_blank">
+		<img src="{{ site.url }}/assets/img/alsacedigitale-small.png" alt="logo alsacedigitale" title="HackSXB par AlsaceDigitale">
+	</a>
+</div>
+
 <footer class="text-center blog-copyright">
   <p>© 2016 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale"><strong>Alsace Digitale</strong></a></p>
 </footer>
