--- a/css/main.scss
+++ b/css/main.scss
@@ -351,13 +351,37 @@ h1.page-header {
  * Footer
  */
 .blog-sticky-logo {
+	display: block;
 	position: fixed;
 	bottom: 10px;
 	right: 10px;
+	&.isoverfooter {
+		display: none;
+	}
 }
 .blog-copyright {
+	display: block;
 	font-size: 16px;
-	margin-bottom: 3px;
+	height: 90px;
+	line-height: 90px;
+	color: #eee;
+	background: url('../assets/img/footer.png');
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  font-weight: bold;
+  p {
+  	margin: 0;
+  	padding: 0;
+  }
+  a, a:hover, a:focus {
+  	color: #fff;
+  }
+}
+@media (max-width: 1220px) {
+	.blog-copyright {
+		background-size: auto 100%;
+  	background-position: center;
+	}
 }
 @media (max-width: 670px) {
 	.blog-sticky-logo {
