makes sure the footer is at the bottom

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,13 @@
 
 body {
 	font-family: 'Oxygen', sans-serif!important;
+	display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.container {
+	flex: 1;
 }
 
 .nopadding {
