add support page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
         <a class="blog-nav-subtitle" href="{{ site.url }}/ressources/">Ça peut aider</a>
       </div>
     </nav>
+    <a class="blog-nav-cta text-center" href="{{ site.url }}/soutien/" title="Soutenir le HackSXB">Soutenir le<br>HackSXB</a>
     <a class="blog-nav-cta text-center" href="https://www.facebook.com/groups/402624123157676/" title="Rejoindre la communauté" target="_blank">Rejoindre la<br>communauté</a>
   </div>
 </div>
