--- a/css/main.scss
+++ b/css/main.scss
@@ -231,7 +231,7 @@ h1.page-header {
   padding: 15px;
   padding-bottom: 25px;
   background: url('../assets/img/sidebar-background.jpg');
-  background-size: 100% auto;
+  background-size: cover;
   border-radius: 4px;
   color: #eee;
   p:last-child, ul:last-child, ol:last-child {
